Added local YOLO model for Client side

--- a/UDP Server Threading.ipynb
+++ b/UDP Server Threading.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f755a4aa",
+   "id": "4583e2c9",
    "metadata": {},
    "source": [
     "### IMPORTS"
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "85da8c5c",
    "metadata": {},
    "outputs": [],
@@ -35,8 +35,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "779341d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.get_num_threads()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "226dac31",
+   "id": "74bfd474",
    "metadata": {},
    "source": [
     "### HELPER METHODS"
@@ -1105,7 +1126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a161f54",
+   "id": "94051608",
    "metadata": {},
    "source": [
     "### Old code, used to send detection boxes instead of entire image"
