added graceful quitting of Server

--- a/UDP Server Threading.ipynb
+++ b/UDP Server Threading.ipynb
@@ -52,7 +52,7 @@
     }
    ],
    "source": [
-    "torch.get_num_threads()"
+    "torch.set_num_threads(20)"
    ]
   },
   {
@@ -73,7 +73,10 @@
     "# Threaded method used to listen for incomming frames sent by the client\n",
     "def receive_frame():\n",
     "    \n",
-    "    while True:\n",
+    "    print(\"\\n**********************************************************\")\n",
+    "    print(\"\\nReady to receive frames, listening from Receiver Thread...\\n\")\n",
+    "    \n",
+    "    while (user_input != 'q'):\n",
     "        # Receive a UDP packet containing a JPEG image\n",
     "        print(\"Listening on port \", port)\n",
     "        data, addr = sock.recvfrom(65535)\n",
@@ -81,7 +84,10 @@
     "        print(\"FRAME RECEIVED\")\n",
     "        \n",
     "        # add frame to queue for processing\n",
-    "        frames_queue.put((data, addr))"
+    "        frames_queue.put((data, addr))\n",
+    "    \n",
+    "    print(\"\\nExiting Receiver Thread...\\n\")\n",
+    "    return()"
    ]
   },
   {
@@ -97,7 +103,7 @@
     "    while True:\n",
     "        \n",
     "        # Processes a frame once the queue is no longer empty\n",
-    "        while not frames_queue.empty():\n",
+    "        while (not frames_queue.empty()) and (user_input != 'q'):\n",
     "            data, addr =  frames_queue.get()\n",
     "            \n",
     "            # read frame\n",
@@ -124,7 +130,11 @@
     "                sock.sendto(string_data, addr)\n",
     "                print(\"FRAME SENT\")\n",
     "            except:\n",
-    "                print(\"******************************* ERROR - FRAME NOT SENT *******************************\")\n"
+    "                print(\"******************************* ERROR - FRAME NOT SENT *******************************\")\n",
+    "        \n",
+    "        if (user_input == 'q'):\n",
+    "            print(\"\\nExiting Predictions Thread...\\n\")\n",
+    "            return()\n"
    ]
   },
   {
@@ -157,7 +167,7 @@
     "# only send detections above .70 confidence\n",
     "model.conf = 0.70\n",
     "\n",
-    "encode_params = [int(cv2.IMWRITE_JPEG_QUALITY), 90]\n",
+    "encode_params = [int(cv2.IMWRITE_JPEG_QUALITY), 70]\n",
     "\n",
     "# IP address of pc where server is running\n",
     "ip = '192.168.1.189'\n",
@@ -177,7 +187,7 @@
    "execution_count": 6,
    "id": "464e3c4c",
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -1119,9 +1129,28 @@
     }
    ],
    "source": [
+    "user_input = \"\"\n",
+    "\n",
     "# start threads\n",
     "t1.start()\n",
-    "t2.start()"
+    "t2.start()\n",
+    "\n",
+    "# check user input to exit program\n",
+    "while True:\n",
+    "    user_input = input(\"\\nType 'q' to quit\\n\")\n",
+    "    if(user_input == 'q'):\n",
+    "        print(\"\\n\\n***********************\")\n",
+    "        print(\"Shutting down Server...\")\n",
+    "        \n",
+    "        # send message to receiver thread to unblock it\n",
+    "        sock.sendto(bytes(\"exit\", 'utf-8'), (ip,port))\n",
+    "        t1.join()\n",
+    "        t2.join()\n",
+    "        print(\"\\n\\n***********************\")\n",
+    "        print(\"Threads quit successfully\")\n",
+    "        exit()\n",
+    "    else:\n",
+    "        print(\"non valid input\")\n"
    ]
   },
   {
